--- a/projects.html
+++ b/projects.html
@@ -34,20 +34,12 @@
            <article>
                <h1> Clone Netflix</h1>
                <p>I used HTML5, CSS, bootstrap for this Netflix clone project</p>
-               <p>Acess the project click on the link :<a href="https://josefcode.github.io/clonenetflix/"> https://josefcode.github.io/clonenetflix/</a></p>
+               <p>Acess the project click on the link :<a href="https://josefcode.github.io/clonenetflix/" target="_blank"> https://josefcode.github.io/clonenetflix/</a></p>
                <div class="image_frame">
                <img src="./img/final.JPG" alt="netflix-image">
                </div>
            </article>
-        <article>
-            <h1> Clone Netflix</h1>
-            <p>I used HTML5, CSS, bootstrap for this Netflix clone project</p>
-            <p>Acess the project click on the link :<a href="https://josefcode.github.io/clonenetflix/">
-                    https://josefcode.github.io/clonenetflix/</a></p>
-            <div class="image_frame">
-                <img src="./img/final.JPG" alt="netflix-image">
-            </div>
-        </article>
+        
         </section>
     
     </main>
