--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,14 @@
                <img src="./img/final.JPG" alt="netflix-image">
                </div>
            </article>
+            <article>
+               <h1> Art Preview </h1>
+               <p>I used HTML5, CSS, Vanilla javaScript for a project: Mouse over the following pieces of art to preview a large version</p>
+               <p>Acess the project click on the link :<a href="https://josefcode.github.io/clonenetflix/" target="_blank"> https://josefcode.github.io/clonenetflix/</a></p>
+               <div class="image_frame">
+               <img src="./img/final.JPG" alt="netflix-image">
+               </div>
+           </article>
         
         </section>
     
