--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,15 @@
                 <img src="./img/mouseover.JPG" alt="mouseover-image">
             </div>
         </section>
+        <section>
+            <h1> Change Text style font color</h1>
+            <p>I used HTML5, CSS, javaScript for this onclick event to change the text style </p>
+            <p>Acess the project click on the link :<a href="https://josefcode.github.io/textTransform/"
+                    target="_blank">https://josefcode.github.io/textTransform/</a></p>
+            <div class="image_frame">
+                <img src="./img/text.JPG" alt="onclick-image">
+            </div>
+        </section>
         </article>
     
             
