adicionar robot project and edit project.css

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <section>
             <h1> Art preview</h1>
             <p>I used HTML5, CSS, javaScript for this Mouse over the following pieces of art to preview a large version</p>
-            <p>Acess the project click on the link :<a href="https://josefcode.github.io/Art-Preview/"
+            <p>To see the live project please click on the link :<a href="https://josefcode.github.io/Art-Preview/"
                     target="_blank">https://josefcode.github.io/Art-Preview/</a></p>
             <div class="image_frame">
                 <img src="./img/mouseover.JPG" alt="mouseover-image">
@@ -52,10 +52,19 @@
         <section>
             <h1> Change Text style font color</h1>
             <p>I used HTML5, CSS, javaScript for this onclick event to change the text style </p>
-            <p>Acess the project click on the link :<a href="https://josefcode.github.io/textTransform/"
+            <p>To see the live project please click on the link :<a href="https://josefcode.github.io/textTransform/"
                     target="_blank">https://josefcode.github.io/textTransform/</a></p>
             <div class="image_frame">
                 <img src="./img/text.JPG" alt="onclick-image">
+            </div>
+        </section>
+        <section>
+            <h1> Robot </h1>
+            <p>I created this basic project to practice some vanilla javaScript </p>
+            <p>To see the live project please click on the link :<a href="https://bit.ly/5grobot"
+                    target="_blank">https://bit.ly/5grobot</a></p>
+            <div class="image_frame">
+                <img src="./img/robot.png" alt="robot-image">
             </div>
         </section>
         </article>
